--- a/ph_2/acid_rain.Rmd
+++ b/ph_2/acid_rain.Rmd
@@ -167,7 +167,7 @@ We'll use the 'trends' package to test for a trend after 11/15/1990 using a Mann
 library(trend)
 ?mk.test()
 ```
-Read the 'details' section of the manual page for this function. Some are very opaque and off in the land of math theory. But this one is very approachable. To test for a trend in pH, we will call the column using the
+Read the 'details' section of the manual page for this function. Some are very opaque and off in the land of math theory. But this one is very approachable. To test for a trend in pH, we will call the column using the 'mk.test()' function.
 ```{r,include=TRUE,warning=FALSE,message=FALSE}
 post_ccaa <- rain_ph %>%
   filter(datetime>as.POSIXct('1990-11-15'),
